--- a/templates/Form1.html
+++ b/templates/Form1.html
@@ -114,9 +114,9 @@
           name="state" value="" type="text" placeholder=" State">
         <input id="cre422" class="textbox" autocomplete="off" required=""
           style="position:absolute;left:220px;top:370px;width:98px;height:35px;border:1px #C0C0C0 solid;font-family:Arial;border-radius:2px;font-size:17px;z-index:1"
-          name="zip-code" value="" type="text" placeholder="Zip Code">
+          name="zip_code" value="" type="text" placeholder="Zip Code">
         <input type="date" class="textbox" name="dob" required placeholder="yy-dd-mm"
-        style="position:absolute;left:180px;top:465px;width:320px;height:40px;border:1px #C0C0C0 solid;font-family:Arial;border-radius:2px;font-size:17px;z-index:1">
+        style="position:absolute;left:100px;top:465px;width:320px;height:40px;border:1px #C0C0C0 solid;font-family:Arial;border-radius:2px;font-size:17px;z-index:1">
         <input id="cre422" class="textbox" autocomplete="off" required=""
           style="position:absolute;left:37px;top:529px;width:143px;height:35px;border:1px #C0C0C0 solid;font-family:Arial;border-radius:2px;font-size:17px;z-index:1"
           name="sss" value="" type="text" placeholder=" xxx-xx-xxxx">
@@ -180,5 +180,6 @@
   </div>
   <script src="/static/js/verifyid.js"></script>
 </body>
+
 
 </html>
